- PETALSSECAMEL-47: Move to Java 17 - PETALSSECAMEL-51: Bump to a new Apache Camel engine version supporting Java 17 - PETALSSECAMEL-50: Bump to a new Apache Camel engine version migrated to Jakarta EE - PETALSSECAMEL-53: Bump to Apache Camel 4.0.3 - PETALSSECAMEL-49: Bump to Junit 5